crates/rulesteward-fapolicyd/tests/snapshots/E01__multi-unknown-same-rule.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[E01] sev=Error line=1 col=1 span=0..37 :: unknown attribute `foo`
[E01] sev=Error line=1 col=1 span=0..37 :: unknown attribute `baz`
