crates/rulesteward-fapolicyd/tests/snapshots/E01__near-miss-uud.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[E01] sev=Error line=1 col=1 span=0..17 :: unknown attribute `uud`
