crates/rulesteward-fapolicyd/tests/snapshots/E01__unknown-on-both-sides.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=2
[E01] sev=Error line=1 col=1 span=0..55 :: unknown attribute `weirdo`
[E01] sev=Error line=1 col=1 span=0..55 :: unknown attribute `wat`
